--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,15 @@
+:root{
+    --background-primary-color: #ffffff;
+    --background-secondary-color: #f5f5f5;
+    --background-tertiary-color: #000000;
+
+    --butoon-primary-color: #8f0101;
+    --butoon-secundary-color: #bb1515;
+
+    --text-primary-color: #222222;
+    --text-secundary-color: #ffffff;
+}
+
 /* CSS RESET */
 body, img, h1, fieldset, legend, label, input, select, textarea, button {
     margin: 0;
