--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,44 @@
-:root{
-    --background-primary-color: #ffffff;
-    --background-secondary-color: #f5f5f5;
-    --background-tertiary-color: #000000;
+@font-face {
+  font-family: "Montserrat";
+  src: url(../fonts/Montserrat-VariableFont_wght.ttf);
+  font-style: normal;
+  font-display: swap;
+}
 
-    --butoon-primary-color: #8f0101;
-    --butoon-secundary-color: #bb1515;
+:root {
+  --primary-color: #8f0101;
+  --secundary-color: #bb1515;
 
-    --text-primary-color: #222222;
-    --text-secundary-color: #ffffff;
+  --background-primary-color: #ffffff;
+  --background-secondary-color: #f5f5f5;
+  --background-tertiary-color: #000000;
+
+  --text-primary-color: #222222;
+  --text-secundary-color: #ffffff;
+
+  --title-weight: 700;
+  --text-weight: 400;
+  --menu-text-weight: 500;
 }
 
 /* CSS RESET */
-body, img, h1, fieldset, legend, label, input, select, textarea, button {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+body,
+img,
+h1,
+fieldset,
+legend,
+label,
+input,
+select,
+textarea,
+button {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+h1 {
+  font-family: "Montserrat";
+  font-weight: var(--title-weight);
+  color: var(--primary-color);
 }
