--- a/css/global.css
+++ b/css/global.css
@@ -37,9 +37,6 @@ button {
   box-sizing: border-box;
 }
 
-h1 {
+body{
   font-family: "Montserrat";
-  font-weight: var(--title-weight);
-  color: var(--primary-color);
 }
-
