--- a/css/header.css
+++ b/css/header.css
@@ -31,6 +31,7 @@ nav {
 }
 .list-links {
   list-style: none;
+
 }
 .list-links li {
   margin: 16px 0;
@@ -38,4 +39,29 @@ nav {
 .list-links li a {
   color: var(--background-secondary-color);
   text-decoration: none;
+  font-weight: var(--menu-text-weight);
+  font-size: 24px;
+}
+
+@media screen and (min-width: 768px) {
+  .navigation-menu{
+    margin-top: 0;
+    width: 467px;
+  }
+  .navigation-menu label{
+    display: none;
+  }
+  .navigation-menu nav{
+    display: block;
+  }
+  .navigation-menu nav ul{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0;
+  }
+  .navigation-menu nav ul {
+    margin: 0;
+  }
+
 }
