--- a/css/header.css
+++ b/css/header.css
@@ -10,7 +10,16 @@ header {
 
 .logo {
   display: inline-block;
+}
+.img-mobile {
+  display: block;
   width: 68px;
+  height: 64px;
+}
+
+.img-desktop{
+  display: none;
+  width: 260px;
   height: 64px;
 }
 .navigation-menu {
@@ -31,7 +40,6 @@ nav {
 }
 .list-links {
   list-style: none;
-
 }
 .list-links li {
   margin: 16px 0;
@@ -44,17 +52,17 @@ nav {
 }
 
 @media screen and (min-width: 768px) {
-  .navigation-menu{
+  .navigation-menu {
     margin-top: 0;
     width: 467px;
   }
-  .navigation-menu label{
+  .navigation-menu label {
     display: none;
   }
-  .navigation-menu nav{
+  .navigation-menu nav {
     display: block;
   }
-  .navigation-menu nav ul{
+  .navigation-menu nav ul {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -63,5 +71,28 @@ nav {
   .navigation-menu nav ul {
     margin: 0;
   }
+}
+@media screen and (min-width: 1024px) {
+  header{
+    padding: 38px 120px;
+  }
+  .logo {
+    width: 260px;
+    height: 64px;
+  }
+  .img-desktop {
+    display: block;
+  }
+  .img-mobile {
+    display: none;
+  }
+  .navigation-menu a:hover{
+    color: var(--primary-color);
+  }
+}
 
+@media screen and (min-width: 1920px) {
+  header{
+    padding: 38px 160px;
+  }
 }
