--- a/css/hero.css
+++ b/css/hero.css
@@ -1,3 +1,23 @@
-.hero{
-    display: none;
+.hero-img {
+  height: 400px;
+  width: 100%;
+  background: url(../img/hero-mobile.png) no-repeat;
+  background-size: cover;
+}
+
+@media screen and (min-width: 768px) {
+  .hero-img {
+    height: 620px;
+    width: 100%;
+    background: url(../img/hero-tablet.png) no-repeat;
+    background-size: cover;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .hero-img {
+    height: 620px;
+    width: 100%;
+    background: url(../img/hero-desktop.png) no-repeat;
+    background-size: cover;
+  }
 }
