--- a/css/hero.css
+++ b/css/hero.css
@@ -4,6 +4,14 @@
   background: url(../img/hero-mobile.png) no-repeat;
   background-size: cover;
 }
+.hero h2 {
+  padding: 88px 48px;
+  margin: 0;
+  font-weight: var(--text-weight);
+  font-size: 20px;
+  text-align: center;
+  line-height: 1.5;
+}
 
 @media screen and (min-width: 768px) {
   .hero-img {
@@ -12,6 +20,10 @@
     background: url(../img/hero-tablet.png) no-repeat;
     background-size: cover;
   }
+  .hero h2 {
+    padding: 88px 60px;
+    font-size: 32px;
+  }
 }
 @media screen and (min-width: 1024px) {
   .hero-img {
@@ -19,5 +31,14 @@
     width: 100%;
     background: url(../img/hero-desktop.png) no-repeat;
     background-size: cover;
+  }
+  .hero h2 {
+    padding: 88px 120px;
+    font-size: 32px;
+  }
+}
+@media screen and (min-width: 1920px) {
+  .hero h2 {
+    padding: 88px 160px;
   }
 }
