--- a/css/global.css
+++ b/css/global.css
@@ -36,7 +36,26 @@ button {
   padding: 0;
   box-sizing: border-box;
 }
-
-body{
+body {
   font-family: "Montserrat";
+  color: var(--text-primary-color);
+}
+.section-title h2 {
+  font-size: 28px;
+  font-weight: var(--title-weight);
+  margin: 0;
+  text-align: center;
+}
+.section-title hr {
+  width: 180px;
+  height: 4px;
+  background-color: var(--primary-color);
+  border: none;
+  margin: 32px auto 16px;
+}
+
+@media screen and (min-width: 768px) {
+  .section-title h2 {
+    font-size: 32px;
+  }
 }
