--- a/css/global.css
+++ b/css/global.css
@@ -31,7 +31,8 @@ label,
 input,
 select,
 textarea,
-button {
+button,
+p {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -54,8 +55,28 @@ body {
   margin: 32px auto 16px;
 }
 
+.button {
+  width: 280px;
+  height: 64px;
+  color: var(--text-secundary-color);
+  background-color: var(--secundary-color);
+  text-decoration: none;
+  font-weight: var(--title-weight);
+  font-size: 20px;
+  display: inline-block;
+  border-radius: 8px;
+  box-sizing: border-box;
+  line-height: 64px;
+}
+
 @media screen and (min-width: 768px) {
   .section-title h2 {
     font-size: 32px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .button:hover {
+    background-color: var(--primary-color);
   }
 }
