--- a/css/offers.css
+++ b/css/offers.css
@@ -13,12 +13,13 @@
   background-color: transparent;
   position: static;
   padding: 0;
+  margin-bottom: 24px;
 }
 .card header p {
   font-size: 20px;
   font-weight: var(--text-weight);
 }
-.card header h3{
+.card header h3 {
   font-size: 40px;
   font-weight: var(--title-weight);
   margin: 8px 0 0;
@@ -28,4 +29,3 @@
   margin-top: 24px;
   display: inline-block;
 }
-
