--- a/css/global.css
+++ b/css/global.css
@@ -41,6 +41,9 @@ body {
   font-family: "Montserrat";
   color: var(--text-primary-color);
 }
+.section-title {
+  margin-bottom: 32px;
+}
 .section-title h2 {
   font-size: 28px;
   font-weight: var(--title-weight);
@@ -54,7 +57,6 @@ body {
   border: none;
   margin: 32px auto 16px;
 }
-
 .button {
   width: 280px;
   height: 64px;
@@ -78,5 +80,8 @@ body {
 @media screen and (min-width: 1024px) {
   .button:hover {
     background-color: var(--primary-color);
+  }
+  .section-title {
+    margin-bottom: 64px;
   }
 }
