--- a/css/offers.css
+++ b/css/offers.css
@@ -1,10 +1,10 @@
-.offers-cards{
+.offers-cards {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 24px;
 }
-.card {
+.offers-cards .card {
   color: var(--text-secundary-color);
   background-color: black;
   width: 312px;
@@ -14,72 +14,67 @@
   padding: 24px 16px;
   box-sizing: border-box;
 }
-.card header {
+.offers-cards .card header {
   display: block;
   background-color: transparent;
   position: static;
   padding: 0;
   margin-bottom: 24px;
 }
-.card header p {
+.offers-cards .card header p {
   font-size: 20px;
   font-weight: var(--text-weight);
 }
-.card header h3 {
+.offers-cards .card header h3 {
   font-size: 40px;
   font-weight: var(--title-weight);
   margin: 8px 0 0;
 }
-.card header span {
+.offers-cards .card header span {
   font-size: 32px;
   margin-top: 24px;
   display: inline-block;
 }
-.card.japao{
+.offers-cards .card.japao {
   background: url(../img/bg-card-japao.jpg) no-repeat;
   background-size: cover;
 }
-.card.san-andreas{
+.offers-cards .card.san-andreas {
   background: url(../img/bg-card-san-andreas.jpg) no-repeat;
   background-size: cover;
 }
-.card.paraiba{
+.offers-cards .card.paraiba {
   background: url(../img/bg-card-paraiba.jpg) no-repeat;
   background-size: cover;
 }
-.card.manaus{
+.offers-cards .card.manaus {
   background: url(../img/bg-card-manaus.jpg) no-repeat;
   background-size: cover;
 }
-
 @media screen and (min-width: 768px) {
-.offers-cards{
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  gap: 24px;
-  justify-content: center;
-}
+  .offers-cards {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
 }
 @media screen and (min-width: 1024px) {
-  .card {
+  .offers-cards .card {
     width: 420px;
     height: 308px;
   }
-  .card header h3 {
+  .offers-cards .card header h3 {
     font-size: 48px;
   }
-  .card header span {
+  .offers-cards .card header span {
     font-size: 40px;
   }
-  
 }
 @media screen and (min-width: 1440px) {
-  .card {
+  .offers-cards .card {
     width: 588px;
   }
 }
-
 @media screen and (min-width: 1920px) {
   .offers-cards {
     width: 1250px;
