--- a/css/global.css
+++ b/css/global.css
@@ -30,7 +30,9 @@ input,
 select,
 textarea,
 button,
-p {
+p,
+h4,
+header {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -39,11 +41,16 @@ body {
   font-family: "Montserrat";
   color: var(--text-primary-color);
 }
+section {
+  width: 312px;
+  margin: 0 auto 88px;
+}
 .section-page {
   margin-bottom: 88px;
 }
 .section-title {
-  margin-bottom: 32px;
+  width: 280px;
+  margin: 0 auto 32px;
 }
 .section-title h2 {
   font-size: 28px;
@@ -59,7 +66,7 @@ body {
   margin: 32px auto 16px;
 }
 .button {
-  width: 280px;
+  min-width: 280px;
   height: 64px;
   color: var(--text-secundary-color);
   background-color: var(--secundary-color);
@@ -72,6 +79,13 @@ body {
   line-height: 64px;
 }
 @media screen and (min-width: 768px) {
+  section {
+    width: 648px;
+  }
+  .section-title {
+    width: 100%;
+    margin: 0 auto 32px;
+  }
   .section-title h2 {
     font-size: 32px;
   }
@@ -82,5 +96,13 @@ body {
   }
   .section-title {
     margin-bottom: 64px;
+  }
+  section {
+    width: 900px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  section {
+    width: 1200px;
   }
 }
