--- a/css/global.css
+++ b/css/global.css
@@ -31,6 +31,7 @@ select,
 textarea,
 button,
 p,
+h3,
 h4,
 header {
   margin: 0;
@@ -69,10 +70,12 @@ section {
 .content-title {
   font-size: 28px;
   font-weight: var(--title-weight);
+  margin-bottom: 24px;
 }
 .content-text {
   font-size: 20px;
   font-weight: var(--text-weight);
+  margin-bottom: 24px;
 }
 .button {
   min-width: 280px;
