Corrige bugs na galeria de pagamentos

--- a/css/global.css
+++ b/css/global.css
@@ -70,12 +70,12 @@ section {
 .content-title {
   font-size: 28px;
   font-weight: var(--title-weight);
-  margin-bottom: 24px;
+  margin: 0 0 24px;
 }
 .content-text {
   font-size: 20px;
   font-weight: var(--text-weight);
-  margin-bottom: 24px;
+  margin: 0 0 24px;
 }
 .button {
   min-width: 280px;
