--- a/css/hero.css
+++ b/css/hero.css
@@ -1,11 +1,20 @@
-section.hero{
+.hero,
+.bottom-hero {
   width: 100%;
   margin: 0;
 }
-.hero-img {
+
+.hero .hero-img,
+.bottom-hero .hero-img {
   height: 400px;
   width: 100%;
+}
+.hero .hero-img {
   background: url(../img/hero-mobile.png) no-repeat;
+  background-size: cover;
+}
+.bottom-hero .hero-img {
+  background: url(../img/bottom-hero-mobile.png) no-repeat;
   background-size: cover;
 }
 .hero h2 {
@@ -15,10 +24,17 @@ section.hero{
   line-height: 1.5;
 }
 @media screen and (min-width: 768px) {
-  .hero-img {
+  .hero .hero-img,
+  .bottom-hero .hero-img {
     height: 620px;
     width: 100%;
+  }
+  .hero .hero-img {
     background: url(../img/hero-tablet.png) no-repeat;
+    background-size: cover;
+  }
+  .bottom-hero .hero-img {
+    background: url(../img/bottom-hero-tablet.png) no-repeat;
     background-size: cover;
   }
   .hero h2 {
@@ -27,10 +43,12 @@ section.hero{
   }
 }
 @media screen and (min-width: 1024px) {
-  .hero-img {
-    height: 620px;
-    width: 100%;
+  .hero .hero-img {
     background: url(../img/hero-desktop.png) no-repeat;
+    background-size: cover;
+  }
+  .bottom-hero .hero-img {
+    background: url(../img/bottom-hero-desktop.png) no-repeat;
     background-size: cover;
   }
   .hero h2 {
